Запилил комментарии и убрал ненужное

--- a/files/record_attempt_1.ipynb
+++ b/files/record_attempt_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -20,15 +20,20 @@
     "import pyaudio\n",
     "import wave\n",
     "\n",
+    "''' Параметры wave файла '''\n",
     "CHUNK = 1024\n",
     "FORMAT = pyaudio.paInt16\n",
     "CHANNELS = 2\n",
     "RATE = 44100\n",
     "RECORD_SECONDS = 3\n",
-    "WAVE_OUTPUT_FILENAME = \"/Users/nikita/Documents/python_3_filies/ML/ML_sound_1/output_a_train.wav\"\n",
     "\n",
+    "''' Путь к файлу '''\n",
+    "WAVE_OUTPUT_FILENAME = \"/Users/nikita/Documents/python_3_filies/ML/ML_sound_1/output_vot_e.wav\"\n",
+    "\n",
+    "''' Класс подключения к портам аудио '''\n",
     "p = pyaudio.PyAudio()\n",
     "\n",
+    "''' Инициализация открытия с параметрами '''\n",
     "stream = p.open(format=FORMAT,\n",
     "                channels=CHANNELS,\n",
     "                rate=RATE,\n",
@@ -45,10 +50,12 @@
     "\n",
     "print(\"* done recording\")\n",
     "\n",
+    "''' Завершение записи '''\n",
     "stream.stop_stream()\n",
     "stream.close()\n",
     "p.terminate()\n",
     "\n",
+    "''' Запись в файл '''\n",
     "wf = wave.open(WAVE_OUTPUT_FILENAME, 'wb')\n",
     "wf.setnchannels(CHANNELS)\n",
     "wf.setsampwidth(p.get_sample_size(FORMAT))\n",
